--- a/app/Src/Screen3.fx.yaml
+++ b/app/Src/Screen3.fx.yaml
@@ -5,7 +5,8 @@
         LayoutAlignItems: =LayoutAlignItems.Stretch
         LayoutDirection: =LayoutDirection.Vertical
         LayoutMode: =LayoutMode.Auto
-        Width: =Parent.Width
+        Width: =1280
+        X: =40
         ZIndex: =1
 
         HeaderContainer1 As groupContainer.horizontalAutoLayoutContainer:
@@ -36,6 +37,7 @@
                 ZIndex: =1
 
                 HeaderRoleId As button:
+                    FontWeight: =FontWeight.Normal
                     Height: =50
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
@@ -43,11 +45,12 @@
                     RadiusTopRight: =0
                     Size: =12
                     Text: ="Role ID"
-                    Width: =170
+                    Width: =148
                     X: =1
                     ZIndex: =1
 
                 HeaderRoleTitle As button:
+                    FontWeight: =FontWeight.Normal
                     Height: =50
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
@@ -56,10 +59,11 @@
                     Size: =12
                     Text: ="Role Title"
                     Width: =170
-                    X: =171
+                    X: =149
                     ZIndex: =2
 
                 HeaderProjectMaster As button:
+                    FontWeight: =FontWeight.Normal
                     Height: =50
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
@@ -67,11 +71,12 @@
                     RadiusTopRight: =0
                     Size: =12
                     Text: ="Project Master Client"
-                    Width: =170
-                    X: =341
+                    Width: =158
+                    X: =319
                     ZIndex: =3
 
                 HeaderProject As button:
+                    FontWeight: =FontWeight.Normal
                     Height: =50
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
@@ -80,10 +85,11 @@
                     Size: =12
                     Text: ="Project"
                     Width: =170
-                    X: =510
+                    X: =477
                     ZIndex: =4
 
                 HeaderRoleDes As button:
+                    FontWeight: =FontWeight.Normal
                     Height: =50
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
@@ -91,11 +97,12 @@
                     RadiusTopRight: =0
                     Size: =12
                     Text: ="Role Description"
-                    Width: =170
-                    X: =680
+                    Width: =151
+                    X: =647
                     ZIndex: =5
 
                 HeaderRoleFulfil As button:
+                    FontWeight: =FontWeight.Normal
                     Height: =50
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
@@ -104,10 +111,11 @@
                     Size: =12
                     Text: ="Role Fulfillment Contact"
                     Width: =170
-                    X: =850
+                    X: =798
                     ZIndex: =6
 
                 HeaderRolePrimary As button:
+                    FontWeight: =FontWeight.Normal
                     Height: =50
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
@@ -115,11 +123,12 @@
                     RadiusTopRight: =0
                     Size: =12
                     Text: ="Role Primary Contact"
-                    Width: =170
-                    X: =1020
+                    Width: =148
+                    X: =968
                     ZIndex: =7
 
                 HeaderRoleSkills As button:
+                    FontWeight: =FontWeight.Normal
                     Height: =50
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
@@ -127,8 +136,8 @@
                     RadiusTopRight: =0
                     Size: =12
                     Text: ="Role Skills"
-                    Width: =170
-                    X: =1190
+                    Width: =164
+                    X: =1116
                     ZIndex: =8
 
             Gallery2 As gallery.galleryVertical:
@@ -161,7 +170,7 @@
                     RadiusTopLeft: =0
                     RadiusTopRight: =0
                     Width: =HeaderRoleTitle.Width
-                    X: =170
+                    X: =148
                     ZIndex: =2
 
                 TextInput1_2 As text:
@@ -173,7 +182,7 @@
                     RadiusTopLeft: =0
                     RadiusTopRight: =0
                     Width: =HeaderProjectMaster.Width
-                    X: =340
+                    X: =318
                     ZIndex: =3
 
                 TextInput1_3 As text:
@@ -185,7 +194,7 @@
                     RadiusTopLeft: =0
                     RadiusTopRight: =0
                     Width: =HeaderProject.Width
-                    X: =510
+                    X: =476
                     ZIndex: =4
 
                 TextInput1_4 As text:
@@ -197,7 +206,7 @@
                     RadiusTopLeft: =0
                     RadiusTopRight: =0
                     Width: =HeaderRoleDes.Width
-                    X: =680
+                    X: =646
                     ZIndex: =5
 
                 TextInput1_5 As text:
@@ -208,31 +217,31 @@
                     RadiusBottomRight: =0
                     RadiusTopLeft: =0
                     RadiusTopRight: =0
-                    Width: =HeaderRoleId.Width
-                    X: =850
+                    Width: =169
+                    X: =797
                     ZIndex: =6
 
                 TextInput1_6 As text:
                     BorderThickness: =1
-                    Default: ="Text input"
+                    Default: =ThisItem.'Role Primary Contact'
                     OnSelect: =Select(Parent)
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
                     RadiusTopLeft: =0
                     RadiusTopRight: =0
-                    Width: =HeaderRoleId.Width
-                    X: =1020
+                    Width: =147
+                    X: =966
                     ZIndex: =7
 
                 TextInput1_7 As text:
                     BorderThickness: =1
-                    Default: ="Text input"
+                    Default: =ThisItem.'Role Skills'
                     OnSelect: =Select(Parent)
                     RadiusBottomLeft: =0
                     RadiusBottomRight: =0
                     RadiusTopLeft: =0
                     RadiusTopRight: =0
-                    Width: =HeaderRoleId.Width
-                    X: =1186
+                    Width: =166
+                    X: =1113
                     ZIndex: =8
 
