--- a/app/Src/Screen1.fx.yaml
+++ b/app/Src/Screen1.fx.yaml
@@ -4,7 +4,7 @@ Screen1 As screen:
         OnSelect: |-
             =Set(varAttachment, JSON(Image1.Image, JSONFormat.IncludeBinaryData));
             Set(varBase64Only, Mid(varAttachment, Find(",", varAttachment)+1, Len(varAttachment)-Find(",", varAttachment) - 1));
-            AttachFiles.Run(Last(AttachmentControl.Attachments).Name, varBase64Only);
+            EasyUpload.Run(Last(AttachmentControl.Attachments).Name, varBase64Only);
         Text: ="Button"
         X: =1065
         Y: =155
@@ -33,18 +33,4 @@ Screen1 As screen:
         X: =218
         Y: =264
         ZIndex: =4
-
-    Label3 As label:
-        Height: =159
-        Text: =varAttachment
-        Width: =757
-        X: =231
-        Y: =455
-        ZIndex: =5
-
-    TextInput2 As text:
-        Default: ="Text input"
-        X: =218
-        Y: =60
-        ZIndex: =6
 
