--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -117,9 +117,9 @@
     "PreviewCampaign",
     "PreviewTemplate",
     "SendOutScreen",
-    "ExcelScreen",
-    "Screen1",
-    "Screen3",
+    "TestExcelScreenWithGallery",
+    "TestAttachFile",
+    "TestExcelDisplayScreen",
     "UploadExcel"
   ]
 }
