--- a/app/Src/TestExcelDisplayScreen.fx.yaml
+++ b/app/Src/TestExcelDisplayScreen.fx.yaml
@@ -1,4 +1,4 @@
-"Screen3 As screen.'tabletAutoLayout_HeaderMainFooter_ver1.0'":
+"TestExcelDisplayScreen As screen.'tabletAutoLayout_HeaderMainFooter_ver1.0'":
 
     ScreenContainer1 As groupContainer.verticalAutoLayoutContainer:
         Height: =Parent.Height
