--- a/app/Src/NewScreen1.fx.yaml
+++ b/app/Src/NewScreen1.fx.yaml
@@ -595,6 +595,7 @@ NewScreen1 As screen:
         RadiusTopRight: =0
         Size: =12
         Text: ="Upload"
+        Visible: =varTabSelected = 1
         Width: =148
         X: =1150
         Y: =345
