--- a/app/Src/UploadExcel.fx.yaml
+++ b/app/Src/UploadExcel.fx.yaml
@@ -15,6 +15,8 @@ UploadExcel As screen:
             =Set(varAttachment, JSON(Image1.Image, JSONFormat.IncludeBinaryData));
             Set(varBase64Only, Mid(varAttachment, Find(",", varAttachment)+1, Len(varAttachment)-Find(",", varAttachment) - 1));
             ExcelUpload.Run(Last(AttachmentControl_1.Attachments).Name, varBase64Only);
+            Reset(AttachmentControl_1);
+            Refresh(TestList)
         Text: ="Upload"
         X: =496
         Y: =38
