--- a/app/Src/UploadExcel.fx.yaml
+++ b/app/Src/UploadExcel.fx.yaml
@@ -12,7 +12,7 @@ UploadExcel As screen:
     Button4_1 As button:
         Height: =49
         OnSelect: |-
-            =Set(varAttachment, JSON(Image1.Image, JSONFormat.IncludeBinaryData));
+            =Set(varAttachment, JSON(Image1_1.Image, JSONFormat.IncludeBinaryData));
             Set(varBase64Only, Mid(varAttachment, Find(",", varAttachment)+1, Len(varAttachment)-Find(",", varAttachment) - 1));
             ExcelUpload.Run(Last(AttachmentControl_1.Attachments).Name, varBase64Only);
             Reset(AttachmentControl_1);
@@ -174,4 +174,12 @@ UploadExcel As screen:
         X: =130
         Y: =38
         ZIndex: =5
+
+    Image1_1 As image:
+        Height: =122
+        Image: =Last(AttachmentControl_1.Attachments).Value
+        Width: =770
+        X: =218
+        Y: =264
+        ZIndex: =6
 
