--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -121,6 +121,6 @@
     "TestExcelScreenWithGallery",
     "TestAttachFile",
     "TestExcelDisplayScreen",
-    "UploadExcel"
+    "ImportExcelData"
   ]
 }
